# autofmu

./: .flake8  .readthedocs.yml  Dockerfile  LICENSE  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  coverage.yml
docs/: api-reference.rst  cli-reference.rst  conf.py  index.rst  readme.rst  requirements.txt
src/autofmu/: __init__.py  __main__.py  cli.py  generator.py  main.py  strategies.py  utils.py
src/autofmu/cmake/: CMakeLists.txt
src/autofmu/sources/: fmi2Functions.c
tests/: __init__.py  conftest.py  test_generator.py  test_main.py  test_utils.py
