[tool.poetry]
name = "autofmu"
version = "0.1.0"
description = "Automatic FMU approximation tool"
authors = ["Afonso Cerejeira <ajcerejeira@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ajcerejeira/autofmu"
repository = "https://github.com/ajcerejeira/autofmu"
documentation = "https://autofmu.readthedocs.io/"
keywords = [
    "fmi",
    "functional mockup interface",
    "fmu",
    "functional mockup unit",
    "machine learning"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ajcerejeira/autofmu/issues"

[tool.poetry.scripts]
autofmu = "autofmu.main:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
nox = "^2020.5.24"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
