[tool.poetry]
name = "autofmu"
version = "0.1.0"
description = "Automatic FMU approximation tool"
authors = ["Afonso Cerejeira <ajcerejeira@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ajcerejeira/autofmu"
repository = "https://github.com/ajcerejeira/autofmu"
documentation = "https://autofmu.readthedocs.io/"
keywords = [
    "fmi",
    "functional mockup interface",
    "fmu",
    "functional mockup unit",
    "machine learning"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ajcerejeira/autofmu/issues"

[tool.poetry.scripts]
autofmu = "autofmu.main:main"

[tool.poetry.dependencies]
python = "^3.6"
fmpy = "^0.2.22"
lxml = "^4.5.2"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
nox = "^2020.5.24"
black = "^20.8b1"
isort = "^5.4.2"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
pep8-naming = "^0.11.1"
coverage = "^5.2.1"
codecov = "^2.1.9"
mypy = "^0.782"
sphinx = "^3.2.1"
sphinx-argparse = "^0.2.5"
sphinx-autobuild = "^0.7.1"
sphinx-autodoc-typehints = "^1.11.0"
sphinx_rtd_theme = "^0.5.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["autofmu"]

[tool.coverage.report]
show_missing = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_gitignore = true
known_first_party = "autofmu"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
