[tool.poetry]
name = "autofmu"
version = "0.1.0"
description = "Automatic FMU approximation tool"
authors = ["Afonso Cerejeira <ajcerejeira@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ajcerejeira/autofmu"
repository = "https://github.com/ajcerejeira/autofmu"
documentation = "https://autofmu.readthedocs.io/"
keywords = [
    "fmi",
    "functional mockup interface",
    "fmu",
    "functional mockup unit",
    "machine learning"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ajcerejeira/autofmu/issues"

[tool.poetry.scripts]
autofmu = "autofmu.main:main"

[tool.poetry.dependencies]
python = "^3.6"
cmake = "^3.18.2"
jinja2 = "^2.11.2"
lxml = "^4.6.2"
black = {version = "^20.8b1", optional = true}
coverage = {extras = ["toml"], version = "^5.3.1", optional = true}
flake8 = {version = "^3.8.4", optional = true}
flake8-black = {version = "^0.2.1", optional = true}
flake8-bugbear = {version = "^20.11.1", optional = true}
flake8-docstrings = {version = "^1.5.0", optional = true}
flake8-isort = {version = "^4.0.0", optional = true}
FMPy = {version = "0.2.26", optional = true}
isort = {version = "^5.6.4", optional = true}
mypy = {version = "^0.790", optional = true}
pep8-naming = {version = "^0.11.1", optional = true}
pytest = {version = "^6.2.1", optional = true}
pytest-cov = {version = "^2.10.1", optional = true}
Sphinx = {version = "^3.4.0", optional = true}
sphinx-argparse = {version = "^0.2.5", optional = true}
sphinx-autobuild = {version = "^2020.9.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.11.1", optional = true}
sphinx-rtd-theme = {version = "^0.5.0", optional = true}

[tool.poetry.dev-dependencies]
nox = "^2020.5.24"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-argparse",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]
lint = [
    "black",
    "flake8",
    "flake8-black",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-isort",
    "isort",
    "pep8-naming",
]
test = ["coverage", "pytest", "pytest-cov", "FMPy"]
typing = ["mypy"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_gitignore = true
known_first_party = "autofmu"

[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["autofmu"]
omit = ["*tests*"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
